<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".view.activities.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="280dp">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_arrow_back_black_24dp"/>

            <ImageView
                android:id="@+id/imageViewBackground"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/spiderman" />

            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="130dp"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageViewComicsBundle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/spiderman" />
            </FrameLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/tools_title"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto"
            android:paddingTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"/>

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/tools_description"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:paddingTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/textViewPublished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/published"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.144"/>

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="@string/tools_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textViewPublished"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.144"/>

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:gravity="start"
                android:text="@string/comics_price"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPublished"
                app:layout_constraintVertical_bias="0.0"/>

            <TextView
                android:id="@+id/textViewValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="@string/tools_value"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textViewPrice"
                app:layout_constraintTop_toBottomOf="@+id/textViewDate"
                app:layout_constraintVertical_bias="0.0"/>

            <TextView
                android:id="@+id/textViewPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:gravity="start"
                android:text="@string/comics_page"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewValue"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewPageNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="@string/tools_page_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textViewPage"
                app:layout_constraintTop_toBottomOf="@+id/textViewValue"
                app:layout_constraintVertical_bias="0.0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>